# transferfile

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md  client.cc  server.cc
go/: README.md  go.mod
go/pb/transfer/: transfer_file.pb.go  transfer_file_grpc.pb.go
go/transfer_server/: main.go
proto/: helloworld.proto  transfer_file.proto
